# iced_layershell

./: CLAUDE.md  Cargo.toml  README.md
examples/: bar_with_menu.rs  simple_bar.rs
src/: application.rs  clipboard.rs  conversion.rs  error.rs  event_loop.rs  lib.rs  output_subscription.rs  settings.rs  state.rs  surface_manager.rs  task.rs  ui_builder.rs  wayland_clipboard.rs  window_handle.rs
src/handlers/: compositor.rs  data_device.rs  keyboard.rs  layer_shell.rs  mod.rs  output.rs  pointer.rs  seat.rs  touch.rs
